<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="widget_name">Widget Currency Wuzup</string>
    <string name="app_name">Currency Wuzup</string>
    <string name="config">Config</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="title_activity_config">Adjust your widget</string>
    <string name="action_settings">Settings</string>
    <string name="eur_wuzup">Euro Wuzup</string>
    <string name="rub_wuzup">Ruble Wuzup</string>
    <string name="usd_wuzup">Dollar Wuzup</string>
    <string name="arabic_wuzup">Arabic Wuzup</string>
    <string name="crypto_wuzup">Crypto Coins Wuzup</string>
    <string name="updated">Updated:</string>
    <string name="wuzup">wuzup</string>
    <string name="custom_mode">Custom mode</string>
    <string name="show_bitcoin_rate">Show Bitcoin rate</string>
    <string name="show_gold_rate">Show gold rate</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="activity_push_notification_title">Wuzup notifications center</string>
    <string name="wuzup_notification_lead_text">Choose currency pair, condition and rate, and you\'ll get a push notification when curency will reach the rate!</string>
    <string name="notification_pairs_list_title">Already added watchers</string>
    <string name="enter_price">Enter rate</string>
    <string name="add">Add</string>
    <string name="watcher_delete_confirm_text">Do you want to delete this pair watcher?</string>
    <string name="data_incorrect">Data is incorrect</string>
    <string name="equal_or_more">equals or more than</string>
    <string name="equal_or_less">equals or less than</string>
    <string name="close">Close</string>
    <string name="push_notification_title">Goal has been reached</string>
    <string name="start_trade_forex">Start trade Forex</string>

    <string name="hello_world">Hello world!</string>
</resources>
