<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.my_widget.myelsewidget.OptionsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:id="@+id/optionsActivityHead"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/wuzup_notification_lead_text"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/optionsActivityAddWatcherBlock"
        android:layout_below="@+id/optionsActivityHead"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/choosePairSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <Spinner
            android:id="@+id/chooseConditionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>


        <EditText
            android:id="@+id/enterPairTargetPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_price"
            android:numeric="integer|decimal"
            android:inputType="numberDecimal" />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/addPriceReachWatcherBtn"
            android:text="@string/add"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/optionsActivityAddWatcherBlock"
        android:id="@+id/optionsActivityWatchersBlock"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/notification_pairs_list_title"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_height="wrap_content" />

        <ListView
            style="@style/CustomListView"
            android:id="@+id/watchersList"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>





</RelativeLayout>
